에러메시지

--- a/검증.md
+++ b/검증.md
@@ -12,3 +12,68 @@ hsoh 202210280801450579
 -- 2021
 issun15f 202104210952090143
 cgchoi 202103291230100716
+
+
+SELECT
+	*
+FROM
+	OA_EAPP_DOCUMAS oed
+WHERE
+	DOCUNO IN(
+	SELECT
+		docuno
+	FROM
+		(
+		SELECT
+			docuno AS DOCUNO
+		FROM
+			OA_EAPP_DEPTDOCU
+	UNION
+		SELECT
+			DRAFTNO AS DOCUNO
+		FROM
+			OA_EAPP_DEPTDOCU)
+	WHERE
+		docuno NOT IN(
+		SELECT
+			docuno
+		FROM
+			OFFICE5_MIG_JOB_SUCCESS
+)
+)
+	AND DOCUNO NOT LIKE '2023%';
+
+
+    SELECT m.docuno, m.userid, u.name AS USERNAME, m.deptcode, d.deptname, m.formcode, f.FORMNAME, m.regdate, m.title, m.ATTFILENUM, m.status
+      FROM OA_EAPP_DOCUMAS M
+        INNER JOIN (
+          SELECT docuno AS DOCUNO 
+          FROM OA_EAPP_DEPTDOCU
+          WHERE docuno > '201307080855190133'
+          UNION
+          SELECT DRAFTNO AS DOCUNO
+          FROM OA_EAPP_DEPTDOCU
+          WHERE DRAFTNO > '201307080855190133'
+        ) DOC_NUMBER ON M.DOCUNO = DOC_NUMBER.DOCUNO
+        LEFT OUTER JOIN O0_USER_MAST u ON m.USERID = u.USERID
+        LEFT OUTER JOIN O0_USER_DEPT d ON m.DEPTCODE = d.DEPTCODE
+        LEFT OUTER JOIN OA_EAPP_FORM f ON m.FORMCODE  = f.FORMCODE
+      WHERE M.docuno LIKE '2022%' AND M.docuno NOT in(
+                                                  SELECT docuno
+                                                  FROM OFFICE5_MIG_JOB_SUCCESS
+                                              );
+
+SELECT COUNT(*)
+FROM OFFICE5_MIG_JOB_SUCCESS;
+
+SELECT COUNT(*)
+FROM OFFICE5_MIG_APP;
+
+
+-- 에러 추출
+SELECT m.title, u.name AS USERNAME, d.deptname, f.FORMNAME, m.regdate, m.status, m.docuno
+      FROM OA_EAPP_DOCUMAS M
+        INNER JOIN OFFICE5_PDF_ERROR DOC_NUMBER ON M.DOCUNO = DOC_NUMBER.DOCUNO
+        LEFT OUTER JOIN O0_USER_MAST u ON m.USERID = u.USERID
+        LEFT OUTER JOIN O0_USER_DEPT d ON m.DEPTCODE = d.DEPTCODE
+        LEFT OUTER JOIN OA_EAPP_FORM f ON m.FORMCODE  = f.FORMCODE;
